<resources>
    <string name="app_name">Activity Monitoring</string>
    <string name="error_accelerometer_unavailable">Accelerometer Sensor not available.</string>
    <string name="three_axis_sensor">x: %1$.2f\ny: %2$.2f\nz: %3$.2f</string>
    <string name="prediction_templates">Walk: %1$.2f\nRun %2$.2f\nJump %3$.2f\nSquat %4$.2f\n Stand %5$.2f\nSit %6$.2f\n</string>

    <string name="seconds_left_default">seconds left.</string>
    <string name="seconds_left">%1$d seconds left.</string>

    <string name="play_icon_description">Start Logging Data</string>

    <string name="toast_start_transfer_learning">Started adding samples for Transfer Learning.</string>
    <string name="toast_stop_transfer_learning">Stopped adding samples for Transfer Learning.</string>
    <string name="toast_failed_stop_transfer_learning">Stop adding samples for Transfer Learning failed.</string>

    <string name="toast_start_knn_learning">Started kNN Learning.</string>
    <string name="toast_stop_knn_learning">Stopped kNN Learning.</string>
    <string name="toast_failed_stop_knn_learning">Stopping kNN Learning failed.</string>

    <string name="transfer_learning_stop_text">Stop Transfer Learning</string>
    <string name="classification_result">%1$s</string>
    <string name="prediction_result">%1$s</string>
    <string name="loss_string">%1$.2f</string>
    <string name="prediction_confidence">Confidence: %1$.2f</string>

    <string name="not_training">Learning disabled</string>
    <string name="error_already_learning">The device is already learning.</string>
    <string name="fab_train_description">Add kNN Samples</string>
    <string name="fab_transfer_learn_description">Add Samples</string>
    <string name="fab_main_description">Open Menu</string>
    <string name="loss_value">%1$.2f.</string>
    <string name="train_title">Activity Training</string>
    <string name="automatic_classify">Automatically learning the kNN model as %1$s for the next %2$d seconds.</string>
    <string name="predictions_transfer_learning">Predictions: Transfer Learning</string>
    <string name="predictions_generic_model">Predictions: Generic Model</string>
    <string name="hapt_offline_model_predictions">HAPT Offline Learning Predictions</string>
    <string name="enable_training">Enable Training</string>
    <string name="mobile_transfer_model">Mobile Transfer Model</string>
    <string name="generic_model">Generic Model</string>
    <string name="custom_model">Custom Model</string>
    <string name="predictions_hapt_offline">Predictions: HAPT Offline Model</string>
    <string name="hapt_offline_transfer_model">HAPT Offline Transfer Model</string>
</resources>