<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    tools:context=".MainActivity">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/data_log_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        android:contentDescription="@string/fab_train_description"
        android:src="@drawable/ic_baseline_fiber_manual_record_24"
        app:layout_constraintBottom_toTopOf="@+id/train_fab"
        app:layout_constraintEnd_toEndOf="@+id/train_fab"
        app:layout_constraintStart_toStartOf="@+id/train_fab"

        app:fabSize="auto"/>

    <TextView
        android:id="@+id/data_log_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/fab_log_description"
        app:layout_constraintBottom_toBottomOf="@+id/data_log_fab"
        app:layout_constraintEnd_toStartOf="@+id/data_log_fab"
        app:layout_constraintTop_toTopOf="@+id/data_log_fab" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/train_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        android:contentDescription="@string/fab_train_description"
        android:src="@drawable/ic_baseline_model_training_24"
        app:layout_constraintBottom_toTopOf="@+id/main_fab"
        app:layout_constraintEnd_toEndOf="@+id/main_fab"
        app:layout_constraintStart_toStartOf="@+id/main_fab"
        app:fabSize="auto"/>

    <TextView
        android:id="@+id/train_model_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/fab_train_description"
        app:layout_constraintBottom_toBottomOf="@+id/train_fab"
        app:layout_constraintEnd_toStartOf="@+id/train_fab"
        app:layout_constraintTop_toTopOf="@+id/train_fab" />


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/main_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/fab_main_description"
        android:src="@drawable/ic_baseline_add_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:fabSize="auto"/>

    <ScrollView
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:fillViewport="true"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="10dp"
                app:cardElevation="5dp"
                app:cardMaxElevation="12dp"
                app:cardPreventCornerOverlap="true"
                app:cardUseCompatPadding="true">

                <TextView
                    android:id="@+id/knn_model"
                    android:layout_width="200dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:contentDescription="@string/app_name"
                    android:gravity="center"
                    android:text="@string/classification_result"
                    android:textSize="40sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center_horizontal"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:text="kNN"
                    android:textSize="12sp"
                    android:textStyle="bold" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="10dp"
                app:cardElevation="5dp"
                app:cardMaxElevation="12dp"
                app:cardPreventCornerOverlap="true"
                app:cardUseCompatPadding="true">

                <TextView
                    android:id="@+id/base_model"
                    android:layout_width="200dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:contentDescription="@string/app_name"
                    android:gravity="center"
                    android:text="@string/classification_result"
                    android:textSize="40sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center_horizontal"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:text="Base"
                    android:textSize="12sp"
                    android:textStyle="bold" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="10dp"
                app:cardElevation="5dp"
                app:cardMaxElevation="12dp"
                app:cardPreventCornerOverlap="true"
                app:cardUseCompatPadding="true">

                <TextView
                    android:id="@+id/transfer_model"
                    android:layout_width="200dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:contentDescription="@string/app_name"
                    android:gravity="center"
                    android:text="@string/classification_result"
                    android:textSize="40sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center_horizontal"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:text="Transfer"
                    android:textSize="12sp"
                    android:textStyle="bold" />
            </androidx.cardview.widget.CardView>

            <EditText
                android:id="@+id/timer_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="340dp"
                android:ems="7"
                android:hint="Timer Seconds"
                android:inputType="number" />

            <ImageButton
                android:id="@+id/stop_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="340dp"
                android:contentDescription="Stop Logging Data"
                android:src="@drawable/ic_baseline_stop_circle_24">Stop</ImageButton>

            <ImageButton
                android:id="@+id/timed_log_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="340dp"
                android:contentDescription="Timed Data Logging"
                android:src="@drawable/ic_baseline_timer_24">Timed Logging
            </ImageButton>

            <ImageButton
                android:id="@+id/play_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="340dp"
                android:contentDescription="@string/play_icon_description"
                android:src="@drawable/ic_baseline_play_circle_filled_24">Play
            </ImageButton>

            <ImageButton
                android:id="@+id/pause_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="340dp"
                android:contentDescription="Pause Logging Data"
                android:src="@drawable/ic_baseline_pause_circle_filled_24">Pause
            </ImageButton>


        </LinearLayout>
    </ScrollView>

    <!--
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/log_play_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_marginRight="16dp"
        android:contentDescription="@string/fab_main_description"
        android:src="@drawable/ic_baseline_add_24"
        app:layout_constraintBottom_toBottomOf="@+id/data_log_fab"
        app:layout_constraintEnd_toStartOf="@+id/data_log_fab"
        app:layout_constraintTop_toTopOf="@+id/data_log_fab"
        app:fabSize="mini"/>

    <TextView
        android:id="@+id/start_log_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/fab_train_description"
        app:layout_constraintBottom_toBottomOf="@+id/log_play_fab"
        app:layout_constraintEnd_toStartOf="@+id/log_play_fab"
        app:layout_constraintTop_toTopOf="@+id/log_play_fab" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/log_stop_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_marginRight="16dp"
        android:contentDescription="@string/fab_main_description"
        android:src="@drawable/ic_baseline_add_24"
        app:layout_constraintBottom_toTopOf="@+id/log_play_fab"
        app:layout_constraintStart_toStartOf="@+id/log_play_fab"
        app:fabSize="mini"/>

    <TextView
        android:id="@+id/stop_log_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/fab_train_description"
        app:layout_constraintBottom_toBottomOf="@+id/log_stop_fab"
        app:layout_constraintEnd_toStartOf="@+id/log_stop_fab"
        app:layout_constraintTop_toTopOf="@+id/log_stop_fab" />
        -->
</androidx.constraintlayout.widget.ConstraintLayout>


